# options-pricing-engine-black-scholes-binomial-monte-carlo

./: .gitignore  LICENSE  MANIFEST.in  README.md  environment 2.yml  pyproject.toml
docs/examples/: Examples_1_pricing_calls_puts.ipynb  Examples_2_visualization.ipynb
examples/: Examples_2_visualization.ipynb  Examples_3_volatility_smile.ipynb
notebooks/: 01_Pricing_Calls_and_Puts.ipynb  02_Visualization.ipynb  03_Volatility_Smile.ipynb  04_PDE_Finite_Difference.ipynb  05_Finite_Element_Method.ipynb  06_Dupire_Local_Vol.ipynb  07_Risk_and_Validation.ipynb  Examples_1_pricing_calls_puts.ipynb
scripts/: calibrate_surface.py  desk_workflow_localvol_barrier.py  price_book.py
src/optpricer/: __init__.py  binomial.py  black_scholes.py  black_scholes_vec.py  calibration.py  core.py  exotics.py  fem.py  monte_carlo.py  pde.py  processes.py  risk.py  validation.py
src/optpricer 2/: __init__.py  binomial.py  black_scholes.py  cli.py  monte_carlo.py  processes.py  py.typed
tests/: test_black_scholes.py  test_calibration.py  test_dupire.py  test_exotics.py  test_fem.py  test_milstein.py  test_monte_carlo_vs_bs.py  test_pde.py  test_risk.py  test_validation.py  test_vectorized.py
